--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -72,6 +72,7 @@
     <string name="import_folder">درون‌ریزی پوشه</string>
     <string name="export_notes">Export all notes</string>
     <string name="import_notes">Import notes</string>
+    <string name="import_notes_pro">Import notes (Pro)</string>
 
     <!-- FAQ -->
     <string name="faq_1_title">چگونه میتوانم رنگ ابزارک‌ها را تغییر دهم؟</string>
