--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -69,6 +69,7 @@
     <string name="import_folder">ייבא תקיות</string>
     <string name="export_notes">ייצא את כל הפתקים</string>
     <string name="import_notes">ייבא פתקים</string>
+    <string name="import_notes_pro">ייבא פתקים (Pro)</string>
     <!-- FAQ -->
     <string name="faq_1_title">כיצד אוכל לשנות את צבע הווידג\'טים\?</string>
     <string name="faq_1_text">במקרה שיש לך רק ווידג\'ט פעיל אחד, תוכל ליצור אותו מחדש או להשתמש בכפתור בהגדרות האפליקציה כדי להתאים אותו. אם יש לך מספר ווידג\'טים פעילים, הכפתור בהגדרות האפליקציה לא יהיה זמין. מכיוון שהאפליקציה תומכת בהתאמה אישית של צבע לכל ווידג\'ט, תצטרך ליצור מחדש את הווידג\'ט שברצונך להתאים אישית.</string>
