--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -69,6 +69,7 @@
     <string name="import_folder">Importare dosar</string>
     <string name="export_notes">Exportați toate notele</string>
     <string name="import_notes">Importaţi note</string>
+    <string name="import_notes_pro">Importaţi note (Pro)</string>
     <!-- FAQ -->
     <string name="faq_1_title">Cum pot schimba culoarea widget-urilor\?</string>
     <string name="faq_1_text">În cazul în care aveți doar un singur widget activ, îl puteți fie recrea, fie puteți utiliza butonul din setările aplicației pentru a-l personaliza. În cazul în care aveți mai multe widgeturi active, butonul din setările aplicației nu va fi disponibil. Deoarece aplicația acceptă personalizarea culorilor pentru fiecare widget în parte, va trebui să recreați widgetul pe care doriți să îl personalizați.</string>
