--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="rename_note">Перайменаваць нататку</string>
-    <string name="general_note">General note</string>
-    <string name="delete_file_itself">Also delete file \"%s\"</string>
-    <string name="faq_1_title">Як змяніць колер віджэта\?</string>
-    <string name="faq_1_text">In case you have only 1 active widget, you can either recreate it, or use the button in the app settings for customizing it. If you have multiple active widgets, the button in the app settings will not be available. As the app supports color customization per-widget, you will have to recreate the widget that you want to customize.</string>
-    <string name="app_title">Simple Notes Pro: To-do list organizer and planner</string>
     <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Нататкі</string>
-    <string name="widget_config">Thank you for using Simple Notes.
-\nFor more simple apps please visit SimpleMobileTools.com.</string>
+    <string name="widget_config">Thank you for using Simple Notes.\nFor more simple apps please visit SimpleMobileTools.com.</string>
     <string name="cannot_share_empty_text">Cannot share empty text</string>
     <string name="simple_note">Simple Note</string>
     <string name="new_note">Дадаць новую нататку</string>
@@ -19,13 +12,14 @@
     <string name="delete_note">Выдаліць нататку</string>
     <string name="delete_note_prompt_message">Are you sure you want to delete note \"%s\"\?</string>
     <string name="pick_a_note">Pick a note</string>
+    <string name="rename_note">Перайменаваць нататку</string>
+    <string name="general_note">General note</string>
     <string name="create_new_note">Create a new note</string>
     <string name="add_to_note">Add to note</string>
     <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them\?</string>
     <string name="note_shown_widget">Note shown in the widget:</string>
     <string name="show_note_title">Show note title</string>
     <string name="new_note_type">New note type:</string>
-    <string name="export_as_file">Export as file</string>
     <string name="text_note">Тэкставая нататка</string>
     <string name="lock_note">Блакаваць нататку</string>
     <string name="unlock_note">Разблакаваць нататку</string>
@@ -34,18 +28,19 @@
     <string name="locking_warning">WARNING: If you forget the notes\' password, you won\'t be able to recover it or access the notes\' content anymore.</string>
     <string name="new_text_note">New text note</string>
     <string name="new_checklist">New checklist</string>
+    <!-- File notes -->
     <string name="open_file">Адкрыць файл</string>
+    <string name="export_as_file">Export as file</string>
     <string name="file_too_large">File too large, the limit is 1MB</string>
-    <string name="only_import_file_content">Only import the file content
-\n(changing the file will not affect the note)</string>
-    <string name="links_and_emails_clickable">Make links and emails clickable</string>
-    <string name="update_file_at_note">Update the file itself at updating the note
-\n(note gets deleted if file gets deleted, or path changes)</string>
+    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
+    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
+    <string name="delete_file_itself">Also delete file \"%s\"</string>
     <string name="note_saved_successfully">Нататка \"%s\" паспяхова захавана</string>
     <string name="note_exported_successfully">Нататка \"%s\" паспяхова экспартавана</string>
-    <string name="only_export_file_content">Only export the current file content
-\n(changing the note will not affect the file)</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
+    <!-- Settings -->
     <string name="display_success_message">Display save success messages</string>
+    <string name="links_and_emails_clickable">Make links and emails clickable</string>
     <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="monospaced_font">Выкарыстоўваць монашырынны шрыфт</string>
     <string name="show_keyboard">Паказваць клавіятуру пры запуску</string>
@@ -53,26 +48,33 @@
     <string name="show_character_count">Паказваць колькасць сімвалаў</string>
     <string name="alignment">Выраўноўванне</string>
     <string name="left">Left</string>
-    <string name="enable_line_wrap">Пераносіць радкі</string>
-    <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
-    <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
-    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
     <string name="center">Center</string>
     <string name="right">Right</string>
     <string name="widget_note">Note used in widget</string>
     <string name="show_note_picker">Show a note picker on startup</string>
     <string name="autosave_notes">Аўтаматычна захоўваць нататкі</string>
+    <string name="enable_line_wrap">Пераносіць радкі</string>
+    <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
+    <string name="move_done_checklist_items">Move done checklist items to the bottom</string>
+    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
+    <!-- Checklists -->
     <string name="checklist">Кантрольны спіс</string>
     <string name="checklists">Кантрольныя спісы</string>
     <string name="add_new_checklist_item">Дадаць пункт у кантрольны спіс</string>
     <string name="add_new_checklist_items">Дадаць пункты ў кантрольны спіс</string>
     <string name="checklist_is_empty">Кантрольны спіс пусты</string>
     <string name="remove_done_items">Выдаліць выкананыя пункты</string>
+    <!-- Import / Export -->
+    <string name="export_all_notes">Export all notes as files</string>
     <string name="import_folder">Import folder</string>
     <string name="export_notes">Export all notes</string>
     <string name="import_notes">Import notes</string>
-    <string name="export_all_notes">Export all notes as files</string>
     <string name="import_notes_pro">Import notes (Pro)</string>
-    <string name="app_short_description">Simple planner: Create notes, backup &amp; to-do lists with quick note reminder tool</string>
-    <string name="app_long_description"> ★ Need to take a quick note of something to buy, an address, or a startup idea\? Then look no further as this is the simple organizer tool you\'ve been looking for : Simple Notes: To-do list organizer and planner! No complicated setup steps needed, just tap the screen and type in what you came for and create notes, quick lists, checklist or backup for any idea. With your simple personal notebook you can remember anything fast! Shopping for groceries, memorizing your thoughts and easier setting up reminders taking notes has never been easier ★ Simple notes planner is quick, simple to use organizer and remarkable planner and it will serve as an invaluable tool and companion, helping you to remember necessary piece of information! Our reminder tool allows you to keep track of your duties,create daily checklist for items or ideas with unprecedented simplicity, notability and unrivaled time-saving value. Manage your schedule in a quick and simple manner. This notebook reminder tool comes with autosave so you will not discard your changes by mistake. It also supports creating multiple independent plain text notes and lists very fast. You can easily access the note and organize your to-do list in no time by using the customizable and resizable widget, which opens the app on tap. It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. It is fully opensource, provides customizable colors which can be adjusted with quick and fast tweaking. <b>Simple Notes: To-do list organizer and planner </b> is the best item organizer and list planner you can use with no ads. If you need a high quality organizer for a quick and goodnotes, a reliable and user friendly reminder that is truly simple to use, download our app right now :) Have your own personal notebook in your pocket every day and have a backup planner so you will not have to worry about forgetting an important meeting or your shopping list :). It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps. Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors. <b>Check out the full suite of Simple Tools here:</b> https://www.simplemobiletools.com <b>Standalone website of Simple Notes Pro:</b> https://www.simplemobiletools.com/notes <b>Facebook:</b> https://www.facebook.com/simplemobiletools <b>Reddit:</b> https://www.reddit.com/r/SimpleMobileTools </string>
+    <!-- FAQ -->
+    <string name="faq_1_title">Як змяніць колер віджэта\?</string>
+    <string name="faq_1_text">In case you have only 1 active widget, you can either recreate it, or use the button in the app settings for customizing it. If you have multiple active widgets, the button in the app settings will not be available. As the app supports color customization per-widget, you will have to recreate the widget that you want to customize.</string>
+    <!--
+        Haven't found some strings? There's more at
+        https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
+    -->
 </resources>
