--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -71,9 +71,9 @@
     <!-- Import / Export -->
     <string name="export_all_notes">Εξαγωγή όλων των σημειώσεων ως αρχεία</string>
     <string name="import_folder">Εισαγωγή φακέλου</string>
-    <string name="export_notes">Export all notes</string>
-    <string name="import_notes">Import notes</string>
-    <string name="import_notes_pro">Import notes (Pro)</string>
+    <string name="export_notes">Εξαγωγή όλων των σημειώσεων</string>
+    <string name="import_notes">Εισαγωγή σημειώσεων</string>
+    <string name="import_notes_pro">Εισαγωγή σημειώσεων (Pro)</string>
     <!-- FAQ -->
     <string name="faq_1_title">Πώς μπορώ να αλλάξω το χρώμα των Γραφικών στοιχείων;</string>
     <string name="faq_1_text">Σε περίπτωση που έχετε μόνο 1 ενεργό Γραφικό στοιχείο, μπορείτε να το δημιουργήσετε εκ νέου ή να χρησιμοποιήσετε το κουμπί στις ρυθμίσεις της εφαρμογής για να το προσαρμόσετε. Αν έχετε πολλά ενεργά , το κουμπί στις ρυθμίσεις της εφαρμογής δεν θα είναι διαθέσιμο. Καθώς η εφαρμογή υποστηρίζει προσαρμογή χρώματος ανά Γραφικό στοιχείο, θα πρέπει να το δημιουργήσετε ξανά αυτό που θέλετε να προσαρμόσετε.</string>
