--- a/app/src/main/res/values-pa-rPK/strings.xml
+++ b/app/src/main/res/values-pa-rPK/strings.xml
@@ -28,6 +28,7 @@
     <string name="locking_warning">چیتاونی: جےتسی نوٹ دا پاس‌ورڈ بھُل جاندے او، تاں فیر نوٹ دی سمگری لبھ نہیں سکدیاں۔</string>
     <string name="new_text_note">نواں لکھت دا نوٹ بݨاؤ</string>
     <string name="new_checklist">نویں چیک‌لِسٹ بݨاؤ</string>
+    <!-- File notes -->
     <string name="open_file">فائل کھُلھو</string>
     <string name="export_as_file">فائل ایکسپورٹ کرو</string>
     <string name="file_too_large">فائل بہت وڈی اے، سیمہ ۱ میگا‌بائیٹ اے</string>
@@ -37,6 +38,7 @@
     <string name="note_saved_successfully">نوٹ «%s» سامبھیا گیا</string>
     <string name="note_exported_successfully">نوٹ «%s» ایکسپورٹ کیتا گیا</string>
     <string name="only_export_file_content">صرف ایس فائل دا سمگری ہی ایمپورٹ کرو (جے نوٹ بدلیا گیا فائل نوں بدلیا نہیں ہووےگا)</string>
+    <!-- Settings -->
     <string name="display_success_message">سامبھݨ دے سنہے ویکھو</string>
     <string name="links_and_emails_clickable">کڑیاں تے ای‌میل کھُلھݨ چالو کرو</string>
     <string name="place_cursor_end">کرسر نوں نوٹ دے انت وچ رکھو</string>
@@ -55,17 +57,20 @@
     <string name="use_incognito_mode">کیبورڈاں لئی اینکوگنیٹو سیٹنگ ورتو</string>
     <string name="move_done_checklist_items">چیک‌لِسٹ دے پورن حصے نوں ہیٹھاں لے جاؤ</string>
     <string name="add_new_checklist_items_top">سکھر تے چیک‌لِسٹ دے نویں حصے پایو</string>
+    <!-- Checklists -->
     <string name="checklist">Checklist</string>
     <string name="checklists">Checklists</string>
     <string name="add_new_checklist_item">چیک‌لِسٹ وچ نواں حصہ پایو</string>
     <string name="add_new_checklist_items">چیک‌لِسٹ وچ نویں حصے پایو</string>
     <string name="checklist_is_empty">چیک‌لِسٹ وچ نوٹ کوئی نہیں</string>
     <string name="remove_done_items">کیٹیاں ائیٹماں نوں ہٹاؤ</string>
+    <!-- Import / Export -->
     <string name="export_all_notes">فائلاں نوں سارے نوٹ ایکسپورٹ کرو</string>
     <string name="import_folder">فولڈر ایمپورٹ کرو</string>
     <string name="export_notes">سارے نوٹ ایکسپورٹ کرو</string>
     <string name="import_notes">نوٹ ایمپورٹ کرو</string>
     <string name="import_notes_pro">نوٹ ایمپورٹ کرو (ماہر)</string>
+    <!-- FAQ -->
     <string name="faq_1_title">میں وِجٹ دا رنگ کیویں بدل سکدا ہاں؟</string>
     <string name="faq_1_text">In case you have only 1 active widget, you can either recreate it, or use the button in the app settings for customizing it. If you have multiple active widgets, the button in the app settings will not be available. As the app supports color customization per-widget, you will have to recreate the widget that you want to customize.</string>
 </resources>
