--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Pridėti naujus kontrolinio sąrašo objektus</string>
     <string name="checklist_is_empty">Kontrolinis sąršas tuščias</string>
     <string name="remove_done_items">Remove done items</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Eksportuoti visus užrašus kaip bylas</string>
     <string name="import_folder">Importuoti aplanką</string>
