--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Legg til nye sjekklisteelementer</string>
     <string name="checklist_is_empty">Sjekklisten er tom</string>
     <string name="remove_done_items">Fjern utførte elementer</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Eksporter alle notater som filer</string>
     <string name="import_folder">Importer mappe</string>
