--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Добавяне на нови елементи към контролен списък</string>
     <string name="checklist_is_empty">Контролният списък е празен</string>
     <string name="remove_done_items">Премахване на готови елементи</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Експортиране на всички бележки като файлове</string>
     <string name="import_folder">Папка за импортиране</string>
