--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Ychwanegu eitemau newydd at restr wirio</string>
     <string name="checklist_is_empty">Mae\'r rhestr wirio yn wag</string>
     <string name="remove_done_items">Remove done items</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Allforio pob nodyn fel ffeil</string>
     <string name="import_folder">Mewnforio ffolder</string>
