--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Føj nye punkter til tjeklisten</string>
     <string name="checklist_is_empty">Tjeklisten er tom</string>
     <string name="remove_done_items">Fjern færdige elementer</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Eksporter alle noter som filer</string>
     <string name="import_folder">Importer mappe</string>
