--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">افزودن موارد به فهرست نشان‌دار</string>
     <string name="checklist_is_empty">فهرست نشان‌دار خالی است</string>
     <string name="remove_done_items">پاک کردن موارد انجام شده</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">برون‌ریزی همه یادداشت‌ها به عنوان پرونده</string>
     <string name="import_folder">درون‌ریزی پوشه</string>
