--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Lisää uusia kohtia muistilistaan</string>
     <string name="checklist_is_empty">Muistilista on tyhjä</string>
     <string name="remove_done_items">Poista tehdyt kohdat</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Vie kaikki muistiinpanot tiedostoina</string>
     <string name="import_folder">Tuo kansio</string>
