--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Új ellenőrzőlista-elemek hozzáadása</string>
     <string name="checklist_is_empty">Az ellenőrzőlista üres</string>
     <string name="remove_done_items">Kész elemek eltávolítása</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Összes jegyzet exportálása fájlként</string>
     <string name="import_folder">Mappa importálása</string>
