--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">הוסף פריטי רשימת בדיקה חדשים</string>
     <string name="checklist_is_empty">רשימת התיוגים ריקה</string>
     <string name="remove_done_items">הסר פריטים שבוצעו</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">ייצא את כל הפתקים כקבצים</string>
     <string name="import_folder">ייבא תקיות</string>
