--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Adăugați noi elemente în lista de verificare</string>
     <string name="checklist_is_empty">Lista de verificare este goală</string>
     <string name="remove_done_items">Elimină elementele realizate</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Exportați toate notițele ca fișiere</string>
     <string name="import_folder">Importare dosar</string>
