--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">เพิ่มรายการตรวจสอบใหม่</string>
     <string name="checklist_is_empty">รายการตรวจนั้นว่างเปล่า</string>
     <string name="remove_done_items">ลบของที่เรียบร้อยแล้ว</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">ส่งออกโน็ตทุกตัวเป็นไฟล์</string>
     <string name="import_folder">เอาโฟลเดอร์เข้า</string>
