--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -68,6 +68,7 @@
     <string name="add_new_checklist_items">Додати нові позиції у списку</string>
     <string name="checklist_is_empty">Список порожній</string>
     <string name="remove_done_items">Вилучати виконані позиції</string>
+    <string name="add_to_the_top">Add to the top</string>
     <!-- Import / Export -->
     <string name="export_all_notes">Експортувати всі нотатки як файли</string>
     <string name="import_folder">Імпортувати теку</string>
